# AndroidReader

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: example.fb2  example1.epub
app/src/main/cpp/: CMakeLists.txt  ForEPUB.h  ForFB2.h  ForJPG-EPUB.h  ForJava.h  ForPages.h  native-lib.cpp
app/src/main/cpp/libmobi-0.12/: CMakeLists.txt
app/src/main/cpp/libmobi-0.12/tools/: CMakeLists.txt
app/src/main/java/com/example/myapplication/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
